--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.center{
+    align-items: center;
+}
+
+body{
+    background-color: #f2ecee;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 #navigation{
@@ -13,6 +24,46 @@
     margin-bottom: 20px;
 }
 
-.nav-head{
+#nav-head{
     font-weight: 450;
+    text-decoration: none;
+    padding-left: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: initial;
 }
+
+.table{
+    width: 50%;
+    border-collapse: collapse;
+    
+}
+
+.table th {
+    padding: 15px;
+  }
+  .table td {
+    padding: 10px;
+  }
+
+  #input {
+    font-size: 16px;
+    margin-top: 1em;
+    margin-bottom: 1.5em;
+    padding: 0.75em 0.5em;
+    min-width: 200px;
+    border:1px solid gray;
+    border-left: 7px solid var(--neutral-4);
+    transition: border-left-color 160ms;
+    background-color: white;
+   
+  }
+
+  .table tbody {
+    font-size: 18px;
+    border: 1px solid black;
+  }
+  .table thead {
+    background-color: #2b8379;
+    color: white;
+    border: 1px solid white;}
